# eodata-gateway

./: .env  load_env.py  pyproject.toml
notebooks/: explo.ipynb  openeo.ipynb
src/eodata_gateway/: __init__.py  eodag_guide.py  main.py
src/eodata_gateway/config/: __init__.py  opensearch_provider.yml  utils.py
